# transcribe-rs

./: .gitignore  BURN_PARAKEET_PERF.md  CLAUDE.md  Cargo.toml  INVESTIGATION.md  README.md
.github/workflows/: test.yml
docs/: llm-postprocess-quickstart.md  post-processing-analysis.md
docs/superpowers/plans/: 2026-03-29-port-sherpa-engines.md
examples/: bench_compare.rs  bench_whisper_vs_qwen.rs  burn_parakeet.rs  canary.rs  cohere.rs  cohere_transcribe.rs  fire_red_asr.rs  gigaam.rs  llm_postprocess.rs  moonshine.rs  moonshine_streaming.rs  nemotron_streaming.rs  paraformer.rs  paraformer_punct.rs  parakeet.rs  qwen3.rs  qwen_asr.rs  sense_voice.rs  transcribe.rs  whisper.rs  whisperfile.rs  zipformer_ctc.rs  zipformer_transducer.rs
scripts/: convert_parakeet_weights.py  dump_reference_tensors.py
scripts/reference_tensors/: encoder_out.npy  joint_logits_t0.npy  layer0.npy  layer0_after_attn.npy  layer0_after_conv.npy  layer0_after_ff1.npy  layer0_after_ff2.npy  layer0_attn_out.npy  layer0_conv_after_bn.npy  layer0_conv_after_dw.npy  layer0_conv_after_glu.npy  layer0_conv_after_pw1.npy  layer0_conv_after_silu.npy  layer0_conv_out.npy  layer1.npy  layer2.npy  layer3.npy  layer4.npy  layer5.npy  mel.npy  pos_emb.npy  pos_enc_x.npy  pred_blank.npy
specs/: transcription-rs-appendix.md  transcription-rs.md
specs/research/: streaming-adapters.md
src/: accel.rs  audio.rs  chunking.rs  error.rs  itn.rs  lib.rs  llm_postprocess.rs  ort_providers.rs  punct.rs  vad.rs  whisperfile.rs
src/audio/: decoder.rs  mod.rs
src/burn_parakeet/: attention.rs  decoder.rs  encoder.rs  mod.rs  preprocess.rs  weights.rs
src/decode/: bbpe.rs  mod.rs  sentencepiece.rs  tokens.rs
src/engines/: mod.rs  nemotron_streaming.rs  qwen_asr.rs  whisper.rs  whisperfile.rs
src/engines/gigaam/: model.rs
src/engines/moonshine/: cache.rs  engine.rs  mod.rs  model.rs  streaming_model.rs  tokenizer.rs
src/engines/parakeet/: engine.rs  model.rs
src/engines/qwen3/: config.rs  engine.rs  mel.rs  mod.rs  model.rs  prompt.rs  tokenizer.rs
src/engines/sense_voice/: model.rs
src/features/: kaldi_fbank.rs  mel.rs  mod.rs
src/onnx/: PORTING.md  engine.rs  gigaam.rs  mod.rs  moonshine.rs  parakeet.rs  sense_voice.rs  session.rs  types.rs
src/onnx/canary/: decoder.rs  mod.rs  vocab.rs
src/onnx/cohere/: mod.rs
src/onnx/cohere_transcribe/: decoder.rs  mod.rs  vocab.rs
src/onnx/decode/: mod.rs  sentencepiece.rs  tokens.rs
src/onnx/features/: mel.rs
src/onnx/fire_red_asr/: mod.rs
src/onnx/gigaam/: mod.rs
src/onnx/moonshine/: mod.rs  model.rs  streaming.rs
src/onnx/paraformer/: mod.rs
src/remote/: openai.rs
src/transcriber/: energy_adaptive_chunked.rs  fixed_chunked.rs  mod.rs  test_helpers.rs  vad_chunked.rs
src/vad/: mod.rs  silero.rs
src/whisper_cpp/: gpu.rs  mod.rs
tests/: burn_parakeet.rs  canary.rs  cohere.rs  cohere_transcribe.rs  fire_red_asr.rs  gigaam.rs  moonshine.rs  nemotron_streaming.rs  openai.rs  paraformer.rs  parakeet.rs  qwen3.rs  qwen_asr.rs  sense_voice.rs  smart_chunking.rs  transcribe_single_chunk.rs  transcriber.rs  whisper.rs  whisperfile.rs  zipformer_ctc.rs  zipformer_transducer.rs
(+11 files in other folders)
