[package]
name = "transcribe-rs"
version = "0.2.9"
edition = "2021"
description = "A simple library to help you transcribe audio"
license = "MIT"
repository = "https://github.com/cjpais/transcribe-rs"

[features]
default = []

# Runtimes
onnx = ["dep:ort", "dep:ndarray", "dep:rustfft", "dep:base64", "dep:regex", "dep:once_cell"]
whisper = ["dep:whisper-rs"]
whisperfile = ["dep:ureq"]

# Remote engines
openai = ["dep:async-openai", "dep:tokio", "dep:async-trait"]

# Post-processing
# itn = ["dep:nemo-text-processing"]  # TODO: re-enable when nemo-text-processing is published to crates.io

# Convenience
all = ["onnx", "whisper", "whisperfile", "openai"]

[dependencies]
# Always required
hound = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.28"
env_logger = "0.10.0"
thiserror = "2.0.16"
derive_builder = { version = "0.20.2" }

# ONNX runtime
ort = { version = "=2.0.0-rc.10", optional = true }
ndarray = { version = "0.16.1", optional = true }
regex = { version = "1.11.2", optional = true }
once_cell = { version = "1.21.3", optional = true }
rustfft = { version = "6", optional = true }
base64 = { version = "0.22", optional = true }

# Whisperfile
ureq = { version = "3", optional = true }

# ITN (Inverse Text Normalization)
# nemo-text-processing = { version = "0.1.0", git = "https://github.com/FluidInference/text-processing-rs", optional = true }  # TODO: re-enable when published to crates.io

# OpenAI
tokio = { version = "1.47.1", features = ["rt-multi-thread"], optional = true }
async-openai = { version = "0.29.3", optional = true }
async-trait = { version = "0.1.89", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["metal"], optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
whisper-rs = { version = "0.13.2", features = ["vulkan"], optional = true }

# Examples with required features
[[example]]
name = "parakeet"
required-features = ["onnx"]

[[example]]
name = "whisper"
required-features = ["whisper"]

[[example]]
name = "moonshine"
required-features = ["onnx"]

[[example]]
name = "moonshine_streaming"
required-features = ["onnx"]

[[example]]
name = "gigaam"
required-features = ["onnx"]

[[example]]
name = "sense_voice"
required-features = ["onnx"]

[[example]]
name = "whisperfile"
required-features = ["whisperfile"]

[[example]]
name = "openai"
required-features = ["openai"]

[dev-dependencies]
once_cell = "1.21.3"

# Tests with required features
[[test]]
name = "parakeet"
required-features = ["onnx"]

[[test]]
name = "whisper"
required-features = ["whisper"]

[[test]]
name = "moonshine"
required-features = ["onnx"]

[[test]]
name = "gigaam"
required-features = ["onnx"]

[[test]]
name = "sense_voice"
required-features = ["onnx"]

[[test]]
name = "whisperfile"
required-features = ["whisperfile"]

[[test]]
name = "openai"
required-features = ["openai"]
